# taiga-jinr

./: README.md  pyproject.toml  requirements.txt
docs/: QUICKSTART.md
iact_tools/: __init__.py  analysis.py  cli.py  data_loading.py  effective_area.py  iact_tools.py  models.py  reconstruction.py  regressor.py  unfolding.py  utils.py
scripts/: run_pipeline.py
tests/: test_sanity.py
