
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iact-tools"
version = "0.1.0"
description = "IACT data loading, reconstruction and analysis toolkit"
authors = [{name = "You"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "tqdm",
    "scipy",
    "torch",
    "scikit-learn",
    "seaborn",
]

[project.scripts]
iact-run = "iact_tools.__main__:main"
